--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,10 @@
-spring.datasource.url= jdbc:mysql://ls-e70bd771a2d3b1f0c59f5fda330341d1e4697533.czzttae9kagk.us-east-2.rds.amazonaws.com:3306/dbmaster?useSSL=false&serverTimezone=UTC
+spring.datasource.url= jdbc:mysql://ls-e70bd771a2d3b1f0c59f5fda330341d1e4697533.czzttae9kagk.us-east-2.rds.amazonaws.com:3306/dbmaster
 spring.datasource.username= dbmasteruser
 spring.datasource.password= vJ!5k&mdIJ83y9D{_>?U1Ie;!7`x8giE
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.show-sql=true
-spring.profiles.active=@spring.profiles.active@
 
-server.port=8090
+server.max-http-request-header-size=40KB
 
-spring.datasource.hikari.connectionTimeout=30000
-spring.datasource.hikari.idleTimeout=600000
-spring.datasource.hikari.maxLifetime=1800000
-
+server.tomcat.max-http-response-header-size=40KB
 
 
